force-app/main/default/objects/IF_LOG__c/IF_LOG__c.object-meta.xml
<CustomObject>
    <description>인터페이스 로그</description>
    <label>IF LOGs</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{0000000000}</displayFormat>
        <label>IF LOG No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IF LOGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>