force-app/main/default/objects/IF_LOG__c/fields/fm_InternalIFID__c.field-meta.xml
<CustomField>
    <fullName>fm_InternalIFID__c</fullName>
    <formula>IF_INFO__r.IN_IF_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal IF ID</label>
    <type>Text</type>
</CustomField>