force-app/main/default/objects/IF_LOG__c/fields/IF_INFO__c.field-meta.xml
<CustomField>
    <fullName>IF_INFO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IF 정보</description>
    <label>IF INFOs</label>
    <referenceTo>IF_INFO__c</referenceTo>
    <relationshipLabel>IF LOGs</relationshipLabel>
    <relationshipName>IF_LOG</relationshipName>
    <type>Lookup</type>
</CustomField>