force-app/main/default/objects/IF_LOG__c/fields/ifAggregation__c.field-meta.xml
<CustomField>
    <fullName>ifAggregation__c</fullName>
    <label>ifAggregation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>