force-app/main/default/objects/IF_LOG__c/fields/ifDateTime__c.field-meta.xml
<CustomField>
    <fullName>ifDateTime__c</fullName>
    <label>ifDateTime</label>
    <length>14</length>
    <type>Text</type>
</CustomField>