force-app/main/default/objects/IF_LOG__c/fields/ifRcvCnt__c.field-meta.xml
<CustomField>
    <fullName>ifRcvCnt__c</fullName>
    <label>ifRcvCnt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>