force-app/main/default/objects/IF_LOG__c/fields/ifSplitCnt__c.field-meta.xml
<CustomField>
    <fullName>ifSplitCnt__c</fullName>
    <label>ifSplitCnt</label>
    <length>5</length>
    <type>Text</type>
</CustomField>