force-app/main/default/objects/IF_LOG__c/fields/ifSplitSeq__c.field-meta.xml
<CustomField>
    <fullName>ifSplitSeq__c</fullName>
    <label>ifSplitSeq</label>
    <length>5</length>
    <type>Text</type>
</CustomField>