force-app/main/default/objects/IF_LOG__c/fields/ifTotCnt__c.field-meta.xml
<CustomField>
    <fullName>ifTotCnt__c</fullName>
    <label>ifTotCnt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>