force-app/main/default/objects/IF_LOG__c/fields/MSGGUID__c.field-meta.xml
<CustomField>
    <fullName>MSGGUID__c</fullName>
    <label>MSGGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>