force-app/main/default/objects/IF_LOG__c/fields/OERRORTEXT__c.field-meta.xml
<CustomField>
    <fullName>OERRORTEXT__c</fullName>
    <description>false</description>
    <label>OERRORTEXT</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>