force-app/main/default/objects/IF_LOG__c/fields/OIFDATE__c.field-meta.xml
<CustomField>
    <fullName>OIFDATE__c</fullName>
    <label>OIFDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>