force-app/main/default/objects/IF_LOG__c/fields/OMSGGUID__c.field-meta.xml
<CustomField>
    <fullName>OMSGGUID__c</fullName>
    <description>false</description>
    <label>OMSGGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>