force-app/main/default/objects/IF_LOG__c/fields/Qure_Request_Text__c.field-meta.xml
<CustomField>
    <fullName>Qure_Request_Text__c</fullName>
    <label>Qure_Request_Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>