force-app/main/default/objects/IF_LOG__c/fields/Request_to_DIH_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_to_DIH_Time__c</fullName>
    <description>false</description>
    <label>Request_to_DIH_Time</label>
    <type>DateTime</type>
</CustomField>