force-app/main/default/objects/IF_LOG__c/fields/Response_Data_Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Data_Processing_Time__c</fullName>
    <description>false</description>
    <label>Response_Data_Processing_Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>