force-app/main/default/objects/IF_LOG__c/listViews/SearchLog.listView-meta.xml
<ListView>
    <fullName>SearchLog</fullName>
    <columns>NAME</columns>
    <columns>IFID__c</columns>
    <columns>fm_InternalIFID__c</columns>
    <columns>IFDATE__c</columns>
    <columns>OMSGSTATUS__c</columns>
    <columns>OERRORTEXT__c</columns>
    <columns>OERRORCODE__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/26/2021 11:46 AM</value>
    </filters>
    <filters>
        <field>fm_InternalIFID__c</field>
        <operation>contains</operation>
        <value>0094</value>
    </filters>
    <label>Search Log</label>
</ListView>