force-app/main/default/objects/IF_LOG__c/listViews/TodayLog.listView-meta.xml
<ListView>
    <fullName>TodayLog</fullName>
    <columns>NAME</columns>
    <columns>IFID__c</columns>
    <columns>fm_InternalIFID__c</columns>
    <columns>IFDATE__c</columns>
    <columns>OMSGSTATUS__c</columns>
    <columns>OERRORTEXT__c</columns>
    <columns>OERRORCODE__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY,YESTERDAY</value>
    </filters>
    <label>Today Log</label>
</ListView>